tests/machine/x/c/left_join_multi.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/left_join_multi.c:64:3: error: unknown type name ‘itemsItem’
   64 |   itemsItem item;
      |   ^~~~~~~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/left_join_multi.c:85:3: error: unknown type name ‘list_customersItem’; did you mean ‘list_CustomersItem’?
   85 |   list_customersItem customers = tmp1;
      |   ^~~~~~~~~~~~~~~~~~
      |   list_CustomersItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:85:34: error: incompatible types when initializing type ‘int’ using type ‘list_CustomersItem’
   85 |   list_customersItem customers = tmp1;
      |                                  ^~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:89:3: error: unknown type name ‘list_ordersItem’; did you mean ‘list_OrdersItem’?
   89 |   list_ordersItem orders = tmp2;
      |   ^~~~~~~~~~~~~~~
      |   list_OrdersItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:89:28: error: incompatible types when initializing type ‘int’ using type ‘list_OrdersItem’
   89 |   list_ordersItem orders = tmp2;
      |                            ^~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:92:3: error: unknown type name ‘list_itemsItem’; did you mean ‘list_ItemsItem’?
   92 |   list_itemsItem items = tmp3;
      |   ^~~~~~~~~~~~~~
      |   list_ItemsItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:92:26: error: incompatible types when initializing type ‘int’ using type ‘list_ItemsItem’
   92 |   list_itemsItem items = tmp3;
      |                          ^~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:93:3: error: unknown type name ‘list_resultItem’; did you mean ‘list_ResultItem’?
   93 |   list_resultItem tmp4 =
      |   ^~~~~~~~~~~~~~~
      |   list_ResultItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:94:7: warning: implicit declaration of function ‘list_resultItem_create’; did you mean ‘list_ResultItem_create’? [-Wimplicit-function-declaration]
   94 |       list_resultItem_create(orders.len * customers.len * items.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~
      |       list_ResultItem_create
/workspace/mochi/tests/machine/x/c/left_join_multi.c:94:36: error: request for member ‘len’ in something not a structure or union
   94 |       list_resultItem_create(orders.len * customers.len * items.len);
      |                                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:94:52: error: request for member ‘len’ in something not a structure or union
   94 |       list_resultItem_create(orders.len * customers.len * items.len);
      |                                                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:94:64: error: request for member ‘len’ in something not a structure or union
   94 |       list_resultItem_create(orders.len * customers.len * items.len);
      |                                                                ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:96:35: error: request for member ‘len’ in something not a structure or union
   96 |   for (int tmp6 = 0; tmp6 < orders.len; tmp6++) {
      |                                   ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:97:5: error: unknown type name ‘ordersItem’; did you mean ‘OrdersItem’?
   97 |     ordersItem o = orders.data[tmp6];
      |     ^~~~~~~~~~
      |     OrdersItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:97:26: error: request for member ‘data’ in something not a structure or union
   97 |     ordersItem o = orders.data[tmp6];
      |                          ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:98:40: error: request for member ‘len’ in something not a structure or union
   98 |     for (int tmp7 = 0; tmp7 < customers.len; tmp7++) {
      |                                        ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:99:7: error: unknown type name ‘customersItem’; did you mean ‘CustomersItem’?
   99 |       customersItem c = customers.data[tmp7];
      |       ^~~~~~~~~~~~~
      |       CustomersItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:99:34: error: request for member ‘data’ in something not a structure or union
   99 |       customersItem c = customers.data[tmp7];
      |                                  ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:100:14: error: request for member ‘customerId’ in something not a structure or union
  100 |       if (!(o.customerId == c.id)) {
      |              ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:100:30: error: request for member ‘id’ in something not a structure or union
  100 |       if (!(o.customerId == c.id)) {
      |                              ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:104:38: error: request for member ‘len’ in something not a structure or union
  104 |       for (int tmp8 = 0; tmp8 < items.len; tmp8++) {
      |                                      ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:105:9: error: unknown type name ‘itemsItem’; did you mean ‘ItemsItem’?
  105 |         itemsItem i = items.data[tmp8];
      |         ^~~~~~~~~
      |         ItemsItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:105:28: error: request for member ‘data’ in something not a structure or union
  105 |         itemsItem i = items.data[tmp8];
      |                            ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:106:16: error: request for member ‘id’ in something not a structure or union
  106 |         if (!(o.id == i.orderId)) {
      |                ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:106:24: error: request for member ‘orderId’ in something not a structure or union
  106 |         if (!(o.id == i.orderId)) {
      |                        ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:110:13: error: request for member ‘data’ in something not a structure or union
  110 |         tmp4.data[tmp5] =
      |             ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:111:38: error: request for member ‘id’ in something not a structure or union
  111 |             (ResultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                      ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:111:52: error: request for member ‘name’ in something not a structure or union
  111 |             (ResultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:115:9: error: unknown type name ‘itemsItem’; did you mean ‘ItemsItem’?
  115 |         itemsItem i = (itemsItem){0};
      |         ^~~~~~~~~
      |         ItemsItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:115:24: error: ‘itemsItem’ undeclared (first use in this function); did you mean ‘ItemsItem’?
  115 |         itemsItem i = (itemsItem){0};
      |                        ^~~~~~~~~
      |                        ItemsItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:115:24: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/left_join_multi.c:115:34: error: expected ‘,’ or ‘;’ before ‘{’ token
  115 |         itemsItem i = (itemsItem){0};
      |                                  ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:116:13: error: request for member ‘data’ in something not a structure or union
  116 |         tmp4.data[tmp5] =
      |             ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:117:38: error: request for member ‘id’ in something not a structure or union
  117 |             (ResultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                      ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:117:52: error: request for member ‘name’ in something not a structure or union
  117 |             (ResultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:122:7: error: request for member ‘len’ in something not a structure or union
  122 |   tmp4.len = tmp5;
      |       ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:123:28: error: invalid initializer
  123 |   list_ResultItem result = tmp4;
      |                            ^~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:126:5: error: unknown type name ‘resultItem’; did you mean ‘ResultItem’?
  126 |     resultItem r = result.data[tmp10];
      |     ^~~~~~~~~~
      |     ResultItem
/workspace/mochi/tests/machine/x/c/left_join_multi.c:126:20: error: incompatible types when initializing type ‘int’ using type ‘ResultItem’
  126 |     resultItem r = result.data[tmp10];
      |                    ^~~~~~
/workspace/mochi/tests/machine/x/c/left_join_multi.c:127:20: error: request for member ‘orderId’ in something not a structure or union
  127 |     printf("%d ", r.orderId);
      |                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:128:20: error: request for member ‘name’ in something not a structure or union
  128 |     printf("%s ", r.name);
      |                    ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:129:21: error: request for member ‘item’ in something not a structure or union
  129 |     printf("%d\n", r.item);
      |                     ^

   1: #include <stdio.h>
